--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In</title>
-  </head>
-  <body>
-    <form action="" method="post">
-      <input type="text" name="email" placeholder="email" required />
-      <input type="password" name="password" placeholder="password" required />
-      <button type="submit">Submit</button>
-    </form>
-  </body>
-</html>
+<form action="create-session" method="post">
+  <input type="text" name="email" placeholder="email" required />
+  <input type="password" name="password" placeholder="password" required />
+  <button type="submit">Submit</button>
+</form>
